tests/rosetta/out/Lua/15-puzzle-solver.lua
-- Generated by Mochi compiler v0.10.26 on 2025-07-16T09:31:20Z
local testpkg = { Add = function(a,b) return a + b end, Pi = 3.14, Answer = 42 }
print(testpkg.FifteenPuzzleExample())
